[bug] fixed bug where replace cr and lf hits a stackoverflow because of naive char by char replace; implemented a better replace in place of that; [properties] merged the css files into one styling.css; confirm button in properties only enabled when css textfield filled or css is not custom

--- a/src/hypedyn/css/styling2.css
+++ b/src/hypedyn/css/styling2.css
@@ -62,3 +62,87 @@ a.anywhere:active {
 	font-size: 26px;
 	font-weight: bold;
 }
+
+body {
+	//background-image: url(page_back_320_480.png);
+	background-color: aliceblue;
+	background-size: 100%;
+}
+
+.pageflip {
+	background-image: url(page_back_btm_320_480.png);
+}
+
+/* applied to the sections in 'pages' */
+.pagesdiv {
+	position: absolute;
+	overflow: hidden;
+	white-space: pre-wrap; /* preserve sequence of white space and wrap the text */
+	
+	padding: 0px;
+	left: 0px;
+	top: 50px;
+}
+
+/* makes sure the div in the page do not scale with parent section (ie keep constant width) used to be #pages div*/
+.pagecontent {
+	padding: 20px;
+}
+
+/* pages
+		page(div)
+			pagecontent (div)
+*/
+
+#buttons-panel {
+	position: absolute;
+	height: 50px;
+	left: 0px;
+	top: 0px;
+}
+
+#page-indicate-canvas {
+	position: absolute;
+}
+
+#pageflip-canvas {
+	position: absolute;
+	z-Index: -101;
+	opacity: 1.0;
+	top: 0px;
+	left: 0px;
+}
+
+#popup {
+	position: relative;
+	//width: 260px;
+	z-Index: -104;
+	opacity: 1.0;
+	overflow: scroll;
+	border-radius: 15px;
+
+	top: 15px;
+	left: 15px;
+	
+	padding-right: 15px;
+}
+
+#outer-popup {
+	position: fixed;
+	//width: 290px;
+	z-Index: -104;
+	border-radius: 15px;
+	
+	top: 50px;
+	left: 30px;
+}
+
+#lightsoff-canvas {
+	position: fixed;
+	height: 480px;
+	z-Index: -102;
+	opacity: 1.0;
+	color: black;
+	top: 0px;
+	left: 0px;
+}
